--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
+@import url();
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.block1 {
+  background-color: green;
+}
+
+.block2 {
+  display: flex;
+  align-items: center;
+  background-color: yellow;
+}
+
+.NavBar {
+  background-color: green;
+  display: flex;
+  justify-content: space-between;
+}
+
+#logo {
+  width: 100px;
+  height: 100px;
+}
+
+.waitlist-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* align items center makes it center vertically */
+  max-width: 500px;
+  margin: 30px auto;
+}
+
+.waitlist-container-inner {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: space-around;
+  margin: 10px 10px;
 }
